# missioncontrol-planning

./: Dockerfile  Readme.md  docker-compose.yml  experiment_trials.yaml  result copy 2.json  result copy 3.json  result copy.json  result.json  results.js  test.py  test.yaml
src/: domain-1.pddl  domain-3.pddl  domain-4.pddl  domain.pddl  problem-1.pddl  problem-2.pddl  problem-3.pddl  problem-4.pddl  problem.pddl
src/interfaces/srv/: Messages.md
src/labsample_plansys2/: CMakeLists.txt  package.xml
src/labsample_plansys2/launch/: planning.launch.py
src/labsample_plansys2/pddl/: labsample.pddl
src/labsample_plansys2/src/: approach_arm_action_node.cpp  approach_nurse_action_node.cpp  authenticate_nurse_action_node.cpp  close_drawer_action_node.cpp  close_drawer_for_arm_action_node.cpp  close_drawer_for_nurse_action_node.cpp  controller_node.cpp  deposit_action_node.cpp  nav_to_action_node.cpp  navto_action_node.cpp  open-drawer_action_node.cpp  open_door_action_node.cpp  open_drawer_for_arm_action_node.cpp  open_drawer_for_nurse_action_node.cpp  pick_up_sample_action_node.cpp
src/murosa_plan_health/: setup.py
src/murosa_plan_health/launch/: planning.launch.py
src/murosa_plan_patrol/launch/: planning.launch.py
src/murosa_plan_patrol/murosa_plan_patrol/: coordinator_node.py  environment_node.py  planner.py  planner_node.py  robot_node.py
src/murosa_plan_patrol/murosa_plan_patrol/patrol/domain/: patrol_actions.py  patrol_methods.py
src/murosa_plan_patrol/murosa_plan_patrol/patrol/problem/: patrol_problem.py
src/planner/: package.xml  setup.py
src/planner/launch/: planning.launch.py
src/planner/planner/: arm_node.py  coordinator_node.py  environment_node.py  nurse_node.py  planner.py  planner_node.py  robot_node copy.py  robot_node.py
src/planner/planner/examples/hospital/domain/: hospital_mod_actions.py  hospital_mod_methods.py
src/planner/planner/examples/hospital/problem/: hospital_mod_problem.py
src/planner/planner/ipyhop/: __init__.py  actions.py  mc_executor.py  planner.py
src/plansys2_bt_example/src/: nav2_sim_node.cpp
src/plansys2_labsample/: CMakeLists.txt  package.xml
src/plansys2_labsample/launch/: planning.launch.py
src/plansys2_labsample/src/: approach_arm_action_node.cpp  approach_nurse_action_node.cpp  askcharge_action_node.cpp  authenticate_nurse_action_node.cpp  charge_action_node.cpp  controller_node.cpp  deposit_action_node.cpp  nav_to_action_node.cpp  nav_to_nurse_action_node.cpp  open_door_action_node.cpp  open_drawer_for_nurse_action_node.cpp  pick_up_sample_action_node.cpp
src/plansys2_patrol_navigation_example/src/: move_action_node.cpp  patrol_action_node.cpp  patrolling_controller_node.cpp
trials/: experiment_trials_murosaplan_16_30_replan.yaml  experiment_trials_murosaplan_1_10_replan.yaml  experiment_trials_murosaplan_22_70_replan.yaml  experiment_trials_murosaplan_24_30_no_replan.yaml  experiment_trials_murosaplan_27_50_no_replan.yaml  experiment_trials_murosaplan_28_10_no_replan.yaml  experiment_trials_murosaplan_5_70_no_replan.yaml  experiment_trials_murosaplan_6_50_replan.yaml
